
		CHANGES in `multcomp' VERSION 0.992-6

    o    add support for lme4::(g)lmer2 objects (thanks to Manuel Eugster)

    o    coef. and vcov. didn't always pass through, spotted by
         John Deke <jdeke73@gmail.com>


		CHANGES in `multcomp' VERSION 0.992-5

    o    remove non_function entries in Rd files


		CHANGES in `multcomp' VERSION 0.992-4

    o    update to mvtnorm 0.8-0


		CHANGES in `multcomp' VERSION 0.992-3

    o    better support for `mer', `lmer' and `glmer' objects
         (package `lme4')


		CHANGES in `multcomp' VERSION 0.992-2

    o    add support for `lme' objects (feature request by
         John Wilkinson <jnwilks@btinternet.com> and Dieter Menne
         <dieter.menne@menne-biomed.de>)


		CHANGES in `multcomp' VERSION 0.992-1

    o    fix LaTeX problem in vignette (spotted by Brian D. Ripley)


		CHANGES in `multcomp' VERSION 0.991-9

    o    fix some minor problems spotted for plotting or
         printing of confidence intervals (thanks for Rich Heiberger and
         Ludwig Hothorn)


		CHANGES in `multcomp' VERSION 0.991-8

    o    make sure `type' is available

    o    catch errors with `aovlist' objects

    o    print for confint method indicates if confidence 
         intervals are adjusted or univariate


		CHANGES in `multcomp' VERSION 0.991-7

    o    try to deal with non-estimable coefficients in `model': if the
         correspondings columns of `linfct' are zero anyway, we silently
         proceed. If not, we stop and ask for a correctly specified model.

    o    try to detect interactions with numeric covariates. We need to
         choose a specific value here but it seems hard to add 
         something appropriate to the user interface (I don't want to touch
         `mcp'). For the time being, we fire a warning and the user can 
         modify `linfct' manually.

    o    add mcp(<name> = "Means"), contribution by Richard M. Heiberger
         <rmh@temple.edu>

    o    add Rich to DESCRIPTION file

