@@ -7,7 +7,7 @@
 \usage{
 contrMat(n, type=c("Dunnett", "Tukey", "Sequen", "AVE", 
                    "Changepoint", "Williams", "Marcus", 
-                   "McDermott"), base = 1)
+                   "McDermott", "UmbrellaWilliams", "GrandMean"), base = 1)
 }
 \arguments{
   \item{n}{ a (possibly named) vector of sample sizes for each group or a
@@ -39,5 +39,11 @@ contrMat(n, type=c("Dunnett", "Tukey", "Sequen", "AVE",
  contrMat(n, type = "Williams")
  contrMat(n, type = "Marcus")
  contrMat(n, type = "McDermott")
+ ### Umbrella-protected Williams contrasts, i.e. a sequence of Williams-type
+ ### contrasts with groups of higher order stepwise omitted
+ contrMat(n, type = "UmbrellaWilliams")
+ ### comparison of each group with grand mean of all groups
+ contrMat(n, type = "GrandMean")
+
 }
 \keyword{misc}
